[package]
name = "ethanol-derive"
version = "0.1.0"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2018"
description = "Derive macros for ethanol"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.72"
quote = "1.0.9"
darling = "0.13.0"